<resources>
    <string name="app_name">mmis_lk</string>
    <string name="local_base_url" translatable="false">http://192.168.0.11:2000/api/</string>
    <string name="messages">Messages</string>
    <string name="login_welcome_message">Login to your personal account</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_success">Login success</string>
    <string name="login_error">Loging error</string>
    <string name="group">Group</string>
    <string name="reference">Reference</string>
    <string name="order_reference">Order reference</string>
    <string name="my_references">My references</string>
    <string name="date">Date</string>
    <string name="sample_date" translatable="false">01.05.2023</string>
    <string name="status">Status</string>
    <string name="references">References</string>
    <string name="teacher">Teacher</string>
    <string name="teachers">Teachers</string>
    <string name="department">Department</string>
    <string name="faculty">Faculty</string>
    <string name="position">Position</string>
    <string name="report_card">Report card</string>
    <string name="birth_date">Birth date</string>
    <string name="time_table">Time table</string>
    <string name="lesson_type_sample" translatable="false">ПР</string>
    <string name="lesson_time_start" translatable="false">10:20</string>
    <string name="lesson_time_end" translatable="false">11:50</string>
    <string name="auditorium_sample" translatable="false">2165</string>
    <string name="lesson_time_start_end" translatable="false">10:20 11:50</string>
    <string name="lesson_type_aud" translatable="false">ПР 2165</string>
    <string name="discipline_name_sample" translatable="false">Теория вероятностей</string>
    <string name="teacher_name_sample" translatable="false">Мальцев Игорь Михайлович</string>
    <string name="friday">Friday</string>
    <string name="moonday">Moonday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="auditorium">Auditorium</string>
    <string name="hours_sample" translatable="false">144</string>
    <string name="midterm_mark">Midterm</string>
    <string name="semestr">Semestr</string>
    <string name="semestr_sample">Semestr 4</string>
    <string name="digital_report_card">Digital report card</string>
    <string name="ordering_reference">Ordering reference</string>
    <string name="select_reference">Select reference</string>
</resources>