<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttonLessonTime"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/lesson_time_start_end"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewDisciplineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/discipline_name_sample"
        app:layout_constraintStart_toEndOf="@+id/buttonLessonTime"
        app:layout_constraintEnd_toStartOf="@id/buttonLessonTypeAud"
        android:maxWidth="210dp"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/teacher_name_sample"
        app:layout_constraintStart_toStartOf="@+id/textViewDisciplineName"
        app:layout_constraintTop_toBottomOf="@id/textViewDisciplineName"/>

    <Button
        android:id="@+id/buttonLessonTypeAud"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/lesson_type_aud"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>